objects/MichalShivasheeshDataCloudObject__dlm.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_MichalDataCloudDescription__c</fullName>
        <label>Key Qualifier MichalDataCloudDescription</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MichalDataCloudDescription__c</fullName>
        <label>MichalDataCloudDescription</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>